# data

./: LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: PULL_REQUEST_TEMPLATE.md  deploy.yml  develop.yml  reviewdog.yml  test.yml  update.yml
csv/: 440001_oita_covid19_inspections.csv  440001_oita_covid19_patients.csv
data/: data.json  handler.py  main.py  readers.py  rss.py  utils.py
data/application/: feed.py  financial.py  patient.py
data/domain/: feed.py  financial.py  patients.py  utils.py
json/: data.json  financial.json  news.json  sickbeds_summary.json
static/data/: 440001_oita_covid19_inspections.csv  440001_oita_covid19_patients.csv
tests/: test_readers.py  test_rss.py  test_util.py  test_utils.py
tests/domain/: test_utils.py
tool/convert/: README.md  convert_csv_to_json.py  data_handler.py  main.py  test_convert_csv_to_json.py  test_data_handler.py
tool/convert/modules/: DataHandler.py  FinancialDataHandler.py  PatientDataHandler.py  RSSHandler.py  TestDataHandler.py
tool/convert/modules/test/csv/: test_440001oitacovid19datasummary.csv  test_440001oitacovid19patients.csv
tool/convert/test/csv/: test_440001oitacovid19patients.csv
